Apply suggestions from code review
Co-authored-by: Soroosh Taefi <taefi.soroosh@gmail.com>